# FFR-Bot

./: .gitignore  Dockerfile  README.md  deploy.sh  dev.ps1  dev.sh  ffrrace.py  initdb.js  main.py  mongo.ps1  mypy.ini  pyproject.toml  races.py  requirements.txt  setup.cfg
.circleci/: config.yml
.ssh/: known_hosts
ffrbot/: bot.py  dev.py  rng.py  roles.py
ffrbot/cogs/: config.py  core.py  rng.py  roles.py  users.py
ffrbot/cogs/racing/: async_race.py  race.py  racer.py  races.old.py  races.py  races_old.py  sync_race.py  team_sync_race.py
ffrbot/cogs/voting/: ffrvoter.py  poll.py  poll.test.py  poll_test.py  polls.py  stv_election.py  stv_election.test.py  stv_election_test.py
ffrbot/common/: checks.py  config.py  config_commands.py  constants.py  discord_user.py  mongo_classes.py  redis_client.py  snippits.py  text.py  users.py
ffrbot/common/config/: __init__.py  guild.py  guild_config.py  main.py  role.py  role_config.py
ffrbot/core/: core.py
ffrbot/racing/: race.py  racer.py  races.py
ffrbot/voting/: poll.test.py  polls.py  stv_election.py
scripts/: deploy.sh  dev.sh  mypy-watch.sh
src/: constants.py  ffrrace.py  main.py  races.py  rng.py  roles.py  text.py
src/common/: discord_user.py
src/polls/: poll.py  poll.test.py  polls.py  stv_election.py  stv_election.test.py
src/racing/: async_race.py  race.py  races.old.py  races.py  sync_race.py  team_sync_race.py
src/voting/: poll.py  polls.py  stv_election.py  stv_election.test.py
