[tool.poetry]
name = "ffr-bot"
version = "2.0.0-alpha"
description = "A bot for the FFR discord server"
authors = ["Steven Biro <steven.biro@mail.utoronto.ca>"]
license = "GPLv3"

[tool.poetry.dependencies]
python = "^3.8"
"discord.py" = "^1.6.0"
redis = "^3.5.3"
"discord.py-stubs" = "^1.6.0"
asyncio = "^3.4.3"
discord-ext-typed-commands = "^1.0.3"

[tool.poetry.dev-dependencies]
watchdog = "^2.0.2"
black = "^20.8b1"
mypy = "^0.812"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
